# pyrol

./: .gitignore  LICENSE  README.md  setup.py  test.txt
baselines_files/: running_mean_std.py
dev/: test.py  test_dqn.py  test_lqr.py
envs/: setup.py
envs/gazebo_envs/: __init__.py  gazebo_env.py
envs/gazebo_envs.egg-info/: PKG-INFO  SOURCES.txt
envs/gazebo_envs/alphredv3/: __init__.py  alphredv3.py
envs/gazebo_envs/alphredv3/Settings/: Config_ALPHREDV3.py  Macros_ALPHREDV3.py  Macros_States.py  Robot.py  RobotData.py
envs/gazebo_envs/alphredv3/Simulation/Gazebo/: ALPHREDGazeboInterface.py  ALPHRED_V3.world  __init__.py  data.csv  runTrajectory.py
envs/gazebo_envs/alphredv3/Simulation/Vrep/: VrepInterface.py  vrep.py
envs/gazebo_envs/alphredv3/Util/: Chrono.py  Dynamics_and_Kinematics.py  FSM.py  Getch.py  MathFcn.py  MemoryManager.py  TermColor.py  __init__.py  blkTT1.py  blkTT2.py  debugBEAR.py  homing.py  invdyn_tester.py  jointReader.py  speedTest.py  test_jac.py  test_romelse.py  testing_FK.py  user_input.py
envs/gazebo_envs/alphredv3/Util/vnDataCollect/: CMakeCache.txt  CMakeLists.txt  CSVWriter.cpp  CSVWriter.h  Makefile  cmake_install.cmake  main.cpp  vnDataCollect  vnIMUData.csv
papers/ICML20/: README.md  main.py  utils.py
papers/ICML20/envs/: animation.py  pendulum.py
papers/ICML20/td3/: TD3.py  TD3Loss.py  TD3Mod.py  TD3Restrict.py
pyrol/algorithms/rl/: dqn.py
pyrol/approximators/nn/: README.md  __init__.py  networks.py
pyrol/approximators/nn/initializations/: README.md  torch_inits.py
pyrol/buffers/: replay_buffers.py
pyrol/envs/: README.md  __init__.py
pyrol/envs/gazebo/: __init__.py
pyrol/envs/gazebo/alphredv3/: __init__.py  alphredv3.py
pyrol/envs/maths/: __init__.py  math_env.py
pyrol/envs/maths/pendulum/: __init__.py  animation.py  pendulum.py
pyrol/envs/real/: real_env.py
pyrol/envs/real/bear_pendulum/: bear_pendulum.py  constants.py
pyrol/networks/: README.md  networks.py
pyrol/plots/: matplotlib_ext.py
pyrol/replay_buffers/: replay_buffers.py
pyrol/runners/: runners.py
pyrol/unit_tests/: debugger_test.py
pyrol/unittests/: replay_buffers_test.py  utils_test.py
pyrol/utils/: debugger.py  envs.py  logger.py  math_utils.py  maths.py  metrics.py  pytorch.py  torch_utils.py
pytorch_gazebo/envs/gazebo_envs/: __init__.py  gazebo_env.py
pytorch_gazebo/envs/gazebo_envs/alphredv3/: alphredv3.py
test/: test.py
useful_examples/debugging/: computation_graph.py
(+25 files in other folders)
